--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -11,6 +11,7 @@
 
 @import "{}/imports/ui/styles/components/header.scss";
 @import "{}/imports/ui/styles/components/nav.scss";
+@import "{}/imports/ui/styles/components/sectionA.scss";
 
 
 
