--- a/imports/ui/styles/components/_header.scss
+++ b/imports/ui/styles/components/_header.scss
@@ -3,9 +3,11 @@
 *******************/
 #header {
     background-image: url('/images/header-test.jpg');
-    background-size: cover;
+    background-size: 100% 100%;
     height: 100vh;
     width: 100%;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .highlight-text {
