--- a/imports/ui/styles/components/_nav.scss
+++ b/imports/ui/styles/components/_nav.scss
@@ -4,7 +4,8 @@
 #nav {
     background: transparent;
     border: none;
-    margin-top: 25px;
+    margin-top: 5px;
+    padding:30px;
 }
 
 .navbar-header {
