began sectionA about to leave work

--- a/imports/ui/styles/components/_sectionA.scss
+++ b/imports/ui/styles/components/_sectionA.scss
@@ -4,6 +4,9 @@
 
 #sectionA {
   background: green;
-  height: 200vh;
+  height: 40vh;
   width: 100%;
+  .container {
+    position:absolute;
+  }
 }
