sectionB 3col added

--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -12,6 +12,7 @@
 @import "{}/imports/ui/styles/components/header.scss";
 @import "{}/imports/ui/styles/components/nav.scss";
 @import "{}/imports/ui/styles/components/sectionA.scss";
+@import "{}/imports/ui/styles/components/sectionB.scss";
 
 
 
