--- a/imports/ui/styles/components/_nav.scss
+++ b/imports/ui/styles/components/_nav.scss
@@ -20,13 +20,13 @@
 }
 .navbar-brand {
   font-size: calc(2vw + 4px);
-  color:white !important;
+  color:black !important;
 }
 .nav-list-item {
   margin-left: 1vw;
   margin-right: 1vw;
 
   a {
-    color:white !important;
+    color:black !important;
   }
 }
