--- a/imports/ui/styles/components/_header.scss
+++ b/imports/ui/styles/components/_header.scss
@@ -2,7 +2,7 @@
   Header Styles
 *******************/
 #header {
-    background-image: url('/images/header-test.jpg');
+    background-image: url('/images/header-test-1.jpg');
     background-size: 100% 100%;
     height: 100vh;
     width: 100%;
