--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -13,6 +13,7 @@
 @import "{}/imports/ui/styles/components/nav.scss";
 @import "{}/imports/ui/styles/components/sectionA.scss";
 @import "{}/imports/ui/styles/components/sectionB.scss";
+@import "{}/imports/ui/styles/components/sectionC.scss";
 
 
 
