--- a/imports/ui/styles/components/_sectionB.scss
+++ b/imports/ui/styles/components/_sectionB.scss
@@ -3,7 +3,7 @@
 *******************/
 
 #sectionB {
-    background: darkgrey;
+    background: #e0e0e0;
     height: 55vh;
     width: 100%;
     text-align: center;
@@ -16,6 +16,7 @@
 #sectionB-break {
     width: 20%;
     border-color: blue;
+    margin-bottom: 50px;
 }
 #sectionB-3col-wrapper {
 
