--- a/imports/ui/styles/components/_header.scss
+++ b/imports/ui/styles/components/_header.scss
@@ -12,22 +12,16 @@
 
 .highlight-text {
     text-align: center;
-    font-size: calc(3vw + 5px);
+    font-size: calc(4vw + 10px);
 }
 
 .highlight-text-2 {
     text-align: center;
     font-size: calc(2vw + 5px);
     margin-bottom: 30px;
-
 }
 
-#center-box {
-    position: relative;
-    top: 45%;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-}
+
 
 #short {
     width: 13%;
@@ -37,9 +31,10 @@
 #header-btn {
     margin: 0 auto;
     display: block;
-    border:1px solid black;
-    width:10%;
+    border: 1px solid black;
+    width: 12vw;
     text-align: center;
-    padding: 9px;
+    padding: 10px;
     cursor: pointer;
+    font-size: calc(1vw + -1px);
 }
