--- a/imports/ui/styles/components/_nav.scss
+++ b/imports/ui/styles/components/_nav.scss
@@ -22,11 +22,19 @@
   font-size: calc(2vw + 4px);
   color:black !important;
 }
+.navbar-brand:hover {
+  color:lightgray !important;
+  transition: color .2s ease-in;
+}
 .nav-list-item {
   margin-left: 1vw;
   margin-right: 1vw;
 
   a {
     color:black !important;
+  }
+  a:hover {
+    color:lightgray !important;
+    transition: color .2s ease-in;
   }
 }
