--- a/imports/ui/styles/components/_header.scss
+++ b/imports/ui/styles/components/_header.scss
@@ -38,3 +38,8 @@
     cursor: pointer;
     font-size: calc(1vw + -1px);
 }
+#header-btn:hover {
+  border-color: white;
+  background-color: rgba(255, 255, 255, .5);
+  transition: all .1s ease-in;
+}
