--- a/imports/ui/styles/components/_sectionC.scss
+++ b/imports/ui/styles/components/_sectionC.scss
@@ -1,5 +1,5 @@
 /*********************
-    SectionA Styles
+    SectionC Styles
 *********************/
 #sectionC {
     background: #1e4ebf;
@@ -8,7 +8,9 @@
     text-align: center;
 
     .container {
-        position: absolute;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
     }
 }
 
@@ -22,4 +24,7 @@
 }
 #sectionC-content {
   color:white;
+}
+#map {
+  height: 100%;
 }
