--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -14,6 +14,7 @@
 @import "{}/imports/ui/styles/components/sectionA.scss";
 @import "{}/imports/ui/styles/components/sectionB.scss";
 @import "{}/imports/ui/styles/components/sectionC.scss";
+@import "{}/imports/ui/styles/components/slider.scss";
 
 
 
