--- a/imports/ui/styles/components/_sectionC.scss
+++ b/imports/ui/styles/components/_sectionC.scss
@@ -2,7 +2,7 @@
     SectionC Styles
 *********************/
 #sectionC {
-    background: #031642;
+    background: #8aadff;
     height: 94vh;
     width: 100%;
 
@@ -28,8 +28,49 @@
   height: 100%;
 }
 .sectionC-text {
-  margin-top: 50px;
-  font-size: calc(1vw + 5px);
-  font-weight: 300;
+  margin-top: calc(2vw + 10px);
+  font-size: calc(1vw + 8px);
+  font-weight: 100;
   text-align: justify;
+  line-height: calc(2vw + 5px);
+}
+#sectionC-map {
+  padding: 0;
+}
+/*==================================================
+ * Effect 5
+ * ===============================================*/
+.effect5
+{
+  position: relative;
+}
+.effect5:before, .effect5:after
+{
+  z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 25px;
+  left: 10px;
+  width: 50%;
+  top: 80%;
+  max-width:300px;
+  background: #777;
+  -webkit-box-shadow: 0 35px 20px #777;
+  -moz-box-shadow: 0 35px 20px #777;
+  box-shadow: 0 35px 20px #777;
+  -webkit-transform: rotate(-8deg);
+  -moz-transform: rotate(-8deg);
+  -o-transform: rotate(-8deg);
+  -ms-transform: rotate(-8deg);
+  transform: rotate(-8deg);
+}
+.effect5:after
+{
+  -webkit-transform: rotate(8deg);
+  -moz-transform: rotate(8deg);
+  -o-transform: rotate(8deg);
+  -ms-transform: rotate(8deg);
+  transform: rotate(8deg);
+  right: 10px;
+  left: auto;
 }
