--- a/imports/ui/styles/components/_slider.scss
+++ b/imports/ui/styles/components/_slider.scss
@@ -1,14 +1,31 @@
 /*************
     Slider
 *************/
-
 #slider {
-  background: pink;
-  height: 100vh;
-  width: 100%;
-  text-align: center;
+    background: pink;
+    width: 100%;
+    text-align: center;
 
-  .container {
-      position: absolute;
-  }
+    .container {
+        position: absolute;
+    }
+}
+
+#slides {
+  height: 500px !important;
+
+}
+
+
+#slider-content {
+  padding: 0;
+}
+#slider-wrapper {
+  padding: 0;
+}
+.quilt-squares {
+  padding: 0;
+}
+.quilt-squares-b {
+  padding: 0;
 }
