--- a/imports/ui/styles/components/_header.scss
+++ b/imports/ui/styles/components/_header.scss
@@ -2,7 +2,7 @@
   Header Styles
 *******************/
 #header {
-    background-image: url('/images/header-hogwarts.png');
+    background-image: url('/images/header-hogwarts.jpg');
     background-size: 100% 100%;
     height: 100vh;
     width: 100%;
@@ -13,33 +13,37 @@
 .highlight-text {
     text-align: center;
     font-size: calc(4vw + 10px);
+    color: white;
 }
 
 .highlight-text-2 {
     text-align: center;
     font-size: calc(2vw + 5px);
     margin-bottom: 30px;
+    color:white;
 }
 
 
 
 #short {
     width: 13%;
-    border-color: black;
+    border-color: white;
 }
 
 #header-btn {
     margin: 0 auto;
     display: block;
-    border: 1px solid black;
+    border: 1px solid white;
     width: 12vw;
     text-align: center;
     padding: 10px;
     cursor: pointer;
     font-size: calc(1vw + -1px);
+    color:white;
 }
 #header-btn:hover {
   border-color: white;
   background-color: rgba(255, 255, 255, .5);
   transition: all .1s ease-in;
+  color: rgba(0,0,0, .8);
 }
